@startuml

!define table(x) entity x << (T, white) >>
!define primary_key(x) <b><&key> x</b>
!define column(x) <&media-record> x

skinparam backgroundcolor White
skinparam class {
  BackgroundColor GhostWhite
  ArrowColor Black
  BorderColor Gray
}
skinparam shadowing false
skinparam legend {
  backgroundColor #GhostWhite
  entrySeparator #GhostWhite
}

class Produit {
  primary_key( id ) : int
  -libelleCourt : string 
  -libelleLong : string 
  -referenceFournisseur : string 
  -prixAchat : string 
  -stock : int 
  -actif : bool 
  -prixVente : string 
  -photo : string 
}

class Employe {
  primary_key( id ) : int
  -nom : string UNIQUE
  -roles : array 
  -password : string 
  -prenom : string 
  -email : string 
  -telephone : string 
}

class Fournisseur {
  primary_key( id ) : int
  -nomEntreprise : string 
  -contact : string 
  -telephone : string 
  -siret : string 
  -importateur : bool 
  -fabricant : bool 
}

class Adresse {
  primary_key( id ) : int
  -rue : string 
  -ville : string 
  -code_postal : string 
  -pays : string 
  -numero_rue : string 
}

class Categorie {
  primary_key( id ) : int
  -nom : string 
  -image : string 
}

class Client {
  primary_key( id ) : int
  -email : string UNIQUE
  -roles : array 
  -password : string 
  -nom : string 
  -prenom : string 
  -siret : string 
  -entreprise : string 
  -reference_client : string UNIQUE
  -coefficient : string 
  -telephone : string 
  -type_client : string 
  -confirmationToken : string 
  -isEmailConfirmed : bool 
  -plainPassword : string 
}

class Document {
  primary_key( id ) : int
  -type : string 
  -dateCreation : DateTimeInterface 
  -fileName : string 
}

class CommandeProduit {
  primary_key( id ) : int
  -quantite : string 
}

class Commande {
  primary_key( id ) : int
  -dateCommande : DateTimeInterface 
  -statut : string 
  -montantTotal : string 
  -reductionSupplementaire : string 
  -modePaiement : string 
  -informationReglement : string 
}

Produit "*" -- "1" Categorie
Produit "*" -- "1" Fournisseur
Fournisseur "*" -- "1" Adresse
Categorie "*" -- "1" Categorie
Client "*" -- "1" Employe
Document "*" -- "1" Commande
CommandeProduit "*" -- "1" Commande
CommandeProduit "*" -- "1" Produit
Commande "*" -- "1" Adresse
Commande "*" -- "1" Adresse
Commande "*" -- "1" Client
Commande "*" -- "1" Employe

package Legend {
  legend
    <#GhostWhite,#GhostWhite>|= Color |= Group |
  end legend
  class Class {
    -privateAttribute:type
    #protectedAttribute:type
    +publicAttribute:type
    -privateMethod()
    #protectedMethod()
    +publicMethod()
  }

  abstract Abstract {
    attribute:type
  }
}

note top of Legend
  This document complies with plantuml.com recommendations
  (See https://plantuml.com/en/class-diagram).
end note

@enduml
